# neurosis

./: .gitignore  .prettierrc  LICENSE  README.md  biome.json  forge.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts  webpack.renderer.config.js
scripts/: watch-wasm.mjs
src/: App.tsx  app.tsx  global.d.ts  index.html  index.scss  index.ts  main.tsx  renderer.ts
src/Components/: CrankDrawer.tsx  DrawEmojis.tsx  Neurosis.tsx  TickAnimatedChar.tsx
src/Components/Menu/: index.tsx
src/Components/Menu/Button/GitHub/: index.tsx
src/Components/Menu/Button/Help/: index.tsx
src/Components/Menu/Button/Home/: index.tsx
src/Components/Menu/Button/Reload/: index.tsx
src/Components/Menu/Home/: index.tsx
src/Styles/: App.module.scss  CrankDrawer.module.scss  Menu.module.scss  MenuHome.module.scss  Neurosis.module.scss  index.css
src/Styles/Components/: Menu.module.scss  MenuHome.module.scss
src/components/: App.tsx
src/components/constants/Emoji/: index.ts
src/components/scss/: App.module.scss  index.scss
src/components/store/AnimationFrame/: index.ts
src/constants/: Emoji.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
