[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"

[dependencies.web-sys]
version = "0.3.82"
features = [
	"CanvasRenderingContext2d",
	"Element",
	"HtmlCanvasElement",
	"HtmlElement",
	"Performance",
	"Window",
	"console",
]
